[package]
name = "cryptotop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
caesar = {path = "./caesar"}
english_recognition = {path = "./english_recognition"}
base64 = {path = "./base64"}
hex = {path = "./hex"}